# wallpaper-tray

./: Cargo.toml
.github/workflows/: release.yml
src/: config.rs  main.rs  service.rs  tray.rs  updater.rs  wallpaper.rs
