[package]
name = "wallpaper-tray"
version = "0.1.0"
edition = "2021"
description = "Lightweight system tray for linux-wallpaperengine"
repository = "https://github.com/TKxRIZ/wallpaper-tray"
license = "MIT"

[[bin]]
name = "wallpaper-tray"
path = "src/main.rs"

[dependencies]
ksni       = { version = "0.3", features = ["blocking"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
libc       = "0.2"
ureq       = { version = "2", features = ["json"] }
